[package]
name = "rust-caskdb"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rand = "0.10.2"
